[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Omid Mortazavi <omid_mortazavi@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
pydantic = "^2.0.2"
requests = "^2.31.0"
python-iptables = "^1.0.1"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
